# mysqldb-backup-tool

./: LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/assets/styles/: base.css  components.css  index.ts  scrollbar.css
src/components/: Settings.vue
src/components/settings/: BackupSettings.vue  DatabaseSettings.vue  SystemSettings.vue
src/plugins/: vuetify.ts
src/stores/: store.ts
src/utils/: autostart.ts  backup.ts  crypto.ts  database.ts  store.ts  tray.ts  window.ts
