[package]
name = "mysql-backup-tool"
version = "0.1.0"
description = "MySQL数据库备份工具"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mysql_backup_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["mysql"] }
tauri-plugin-store = "2"
mysql = "24.0.0"
hex = "0.4.3"
zip = "0.6.6"
tempfile = "3.8.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

